@@ -113,7 +113,7 @@ faa60eb6fc15d4ffb0b8b8e77c16b36f *source/admincp/admincp_makehtml.php
 c8a68e22eea76bcaeb6cefb9cae672f0 *source/admincp/admincp_members.php
 d84ce153a40a5d5a23791a759f12369a *source/admincp/admincp_membersplit.php
 c953ccd2cef4dc56bf6d3ba9b5ca9f26 *source/admincp/admincp_menu.php
-4e9ee6e057d57fc940d4ff2d2d1d46b2 *source/admincp/admincp_misc.php
+b357a8a7628931a601d0ad3412527157 *source/admincp/admincp_misc.php
 11232ab0bb6a9c90e69a218cf8496a58 *source/admincp/admincp_moderate.php
 235ae733750761964c5049834286c71e *source/admincp/admincp_nav.php
 23366d92de576cfff4a56565e09fe63c *source/admincp/admincp_optimizer.php
@@ -719,7 +719,7 @@ abd512fece315d07b28d7765a979caae *source/class/task/task_gift.php
 d7a4bcad63d5d32061c4d7db49db5c79 *source/class/task/task_post.php
 f9fabd8329b3a8a91c7a8996bd0bc4cc *source/class/task/task_profile.php
 163b0fa720322c66fa18e0232af5e6a8 *source/class/task/task_promotion.php
-ed98dcd3f403670e2e50c30c15a2a93b *source/discuz_version.php
+2885febd47d4c04ca859b351b8af62c5 *source/discuz_version.php
 8d583a87b95d0226538632a5eae66429 *source/function/cache/cache_admingroups.php
 50b0811c23739eef7c549d94569b6a32 *source/function/cache/cache_advs.php
 c2ed12ab185274b06d67e7ec03867f1e *source/function/cache/cache_albumcategory.php
@@ -781,25 +781,25 @@ fe617c17728d90c0b60d9a7346af4191 *source/function/cache/cache_threadsorts.php
 1afccc6a7e13889e3e8ac245498304b5 *source/function/cache/cache_usergroups.php
 8dffc3b7045a96be9bee7e6915769e59 *source/function/cache/cache_userstats.php
 d41d8cd98f00b204e9800998ecf8427e *source/function/cache/index.htm
-3e48700729257c31c236930d88ad198b *source/function/function_admincp.php
+f62cbe2d0728381dbdee52f5d7a79d58 *source/function/function_admincp.php
 7fd243cd20ec44c2033401535828c6c4 *source/function/function_attachment.php
 d92c261612a6b18fa0f32c5832420258 *source/function/function_block.php
-2e3150bfba20d7d58be9a28d8c7f17dc *source/function/function_blog.php
+d479d451010a5ddd24d638cb0a385b43 *source/function/function_blog.php
 10152e216afcc2730c7961778fd2d36a *source/function/function_cache.php
 a1619d00fe926f4b1c859b7edf50eac7 *source/function/function_cloudaddons.php
 77f06f33b827d1155c5c3c2f28bc7909 *source/function/function_collection.php
 90ee4789682564336c6043e19dc2dcb8 *source/function/function_comment.php
-a29a0dec51aa3fd48b4dd9d746789740 *source/function/function_core.php
+5562d774353af25ba9a99821d0298cb1 *source/function/function_core.php
 fca8f813316f070ad4026e06b938db1d *source/function/function_credit.php
 dc26872be5adc5364f42bc0335c4b504 *source/function/function_delete.php
-1bd339899fade4e51db96b6235d626b0 *source/function/function_discuzcode.php
+57a0667b8bb15bb1542ffacc45480890 *source/function/function_discuzcode.php
 9270deaa36c685a3f408bb9cee2db317 *source/function/function_domain.php
 aaca86dc933b77a2313a4d463cf356a6 *source/function/function_ec_credit.php
 59dbdc54dc7367bb120babaceaace2c1 *source/function/function_editor.php
 ed60f1ffa5730c849ff679cf8fd5efcb *source/function/function_exif.php
 f04336160dae343fe6604156811d68ed *source/function/function_feed.php
 a01713dac428bbdd9bc97331974ab3de *source/function/function_filesock.php
-e30d2666e4e08b2da246a8725d666fbc *source/function/function_followcode.php
+dfd83566bf1ab8634155e0bf57ca51cd *source/function/function_followcode.php
 1c962bafb265c3e1dbafd63a9e0da270 *source/function/function_forum.php
 53af5593f8b73b90b1a627c434310b8a *source/function/function_forumlist.php
 10758d44f84170af87ed5d0a4f15d657 *source/function/function_friend.php
@@ -864,7 +864,7 @@ dd39e7b3d60479bab0488c9050bbac73 *source/include/misc/misc_category.php
 3ddb68067f89c99602eca44afbd9a3e6 *source/include/misc/misc_counter.php
 38a1d94d387aa1537ca2e9d361c2aa69 *source/include/misc/misc_debug.php
 f9f8324c4baa9dbd60545321e213b88c *source/include/misc/misc_emailcheck.php
-ee1528f0e6bb2ca1813e0800f1538045 *source/include/misc/misc_forumselect.php
+7f06ba0572dc4769f9ee863cc5b21f7e *source/include/misc/misc_forumselect.php
 5b37565a3e1ca80d1ad4f087a64280dc *source/include/misc/misc_inputpwd.php
 c7392f1e6d4f0aae8cf77f0d4ed73165 *source/include/misc/misc_promotion.php
 1873a42a1ace7134d47753cf88cb4985 *source/include/misc/misc_ranklist_activity.php
@@ -1149,9 +1149,9 @@ d3af360d74031f8f4b333c5317ced8da *source/language/task/lang_connect_bind.php
 297f7cbfa521e9fe523447c0c952cad5 *source/language/task/lang_promotion.php
 d41d8cd98f00b204e9800998ecf8427e *source/language/userapp/index.htm
 3208eafb39d5636dba7412db57126dd1 *source/language/userapp/lang_template.php
-923197cf400d017b8b1b923687cd9652 *source/module/forum/forum_ajax.php
+2be671e60179f51e6e4d758a6e85f182 *source/module/forum/forum_ajax.php
 bdd5d6283fce2cb038b890f54ecc2a35 *source/module/forum/forum_announcement.php
-df9a7925d66ed5aa69e87a713d9aed9e *source/module/forum/forum_attachment.php
+207db1330d130f4425ad0bfa5b5064d5 *source/module/forum/forum_attachment.php
 28031a26398547ff20359989263cd3b6 *source/module/forum/forum_collection.php
 6a492bd3fcb29fc27f52620233e69f76 *source/module/forum/forum_forumdisplay.php
 90d2edb38e859c8e96f40ed914969e05 *source/module/forum/forum_group.php
