@@ -11,7 +11,7 @@
 			<item id="datatables"><![CDATA[]]></item>
 			<item id="directory"><![CDATA[soso_smilies/]]></item>
 			<item id="copyright"><![CDATA[Comsenz Inc.]]></item>
-			<item id="version"><![CDATA[1.3]]></item>
+			<item id="version"><![CDATA[1.4]]></item>
 			<item id="__modules">
 				<item id="0">
 					<item id="name"><![CDATA[soso]]></item>
