@@ -4,7 +4,7 @@
  *      [Discuz! X] (C)2001-2099 Comsenz Inc.
  *      This is NOT a freeware, use is subject to license terms
  *
- *      $Id: soso.class.php 32519 2013-02-04 08:21:44Z liudongdong $
+ *      $Id: soso.class.php 34306 2014-01-17 04:31:33Z nemohou $
  */
 
 if(!defined('IN_DISCUZ')) {
@@ -25,9 +25,9 @@ class plugin_soso_smilies_base {
 		if(strpos($smilieid, '_') === 0) {
 			$realsmilieid = $smiliekey = substr($smilieid, 1, -2);
 			$serverid = intval(substr($smilieid, -1));
-			$imgsrc = "http://soso{$serverid}.gtimg.cn/sosopic_f/0/{$realsmilieid}/0";
+			$imgsrc = "http://imgstore0{$serverid}.cdn.sogou.com/app/a/100520032/{$realsmilieid}";
 		} elseif(strpos($smilieid, 'e') === 0) {
-			$imgsrc = "http://cache.soso.com/img/img/{$smilieid}.gif";
+			$imgsrc = "http://imgstore01.cdn.sogou.com/app/a/100520032/{$smilieid}";
 		} else {
 			return "{:soso_$smilieid:}";
 		}
